--- a/css/style.css
+++ b/css/style.css
@@ -20,16 +20,77 @@
   --accent-color: #2196F3;
 }
 
+img {
+display:block
+}
+
+.list {
+  list-style: none;
+}
+
+.link{
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+button {
+  cursor: pointer;
+}
+
+ul,ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
 body {
     background-color: var(--primary-background-color);
     color: var(--primary-text-color);
+    box-sizing: border-box;
 
     font-family: Roboto, sans-serif;
     letter-spacing: 0.03em;
     font-size: 14px;
 }
 
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15PX;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 /* HEADER*/
+
+.header {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+
+}
 
 /* LOGO */
 .logo{
@@ -38,6 +99,7 @@ font-weight: 700;
 font-size: 26px;
 line-height: 1.19;
 text-decoration: none;
+margin-right: 93px;
 
 color: var(--primary-text-color);
 }
@@ -50,7 +112,8 @@ color: var(--primary-text-color);
 
 /* LIST-NAV*/
 .list-nav {
-  list-style: none;
+  display: flex;
+  column-gap: 50px;
 }
 
 .list-nav .link {
@@ -73,14 +136,18 @@ color: var(--primary-text-color);
 
 /* CONTACT-LIST  */
 .list-contact {
-  list-style: none;
+  display: flex;
+  align-items: center;
+}
+
+.item-contact {
+  margin-right: 50px;
 }
 
 .list-contact .link{
 font-weight: 500;
 line-height: 1.14;
 letter-spacing: 0.02em;
-text-decoration: none;
 
 color: var(--secondary-text-dark-color)
 }
@@ -93,6 +160,8 @@ color: var(--secondary-text-dark-color)
 /* HERO */
 .hero {
   background-color: #2F303A;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .hero-title {
@@ -101,9 +170,13 @@ color: var(--secondary-text-dark-color)
   font-size: 44px;
   line-height: 1.37;
 
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  display: block;
+  width: 696px;
 
   color: var(--primary-text-light-color);
 }
@@ -121,6 +194,17 @@ color: var(--secondary-text-dark-color)
   letter-spacing: 0.06em;
   cursor: pointer;
 
+  padding: 10px 32px;
+  border: none;
+  display: block;
+  
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
+
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 30px;
+
   color: var(--primary-text-light-color);
   background-color: var(--accent-color);
 }
@@ -136,15 +220,22 @@ color: var(--secondary-text-dark-color)
   line-height: 1.16;
   text-align: center;
 
+  margin-bottom: 50px;
+
   color: var(--primary-text-color);
 }
 
 /* ADVANTAGES */
 .list-advantages{
-  list-style: none;
+  display: flex;
+  column-gap: 30px;
 }
 
-.list-advantages .title{
+.item-advantages{
+  flex-basis: calc((100% - 90px) / 4);
+}
+
+.advantages-title{
   font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
@@ -153,8 +244,9 @@ color: var(--secondary-text-dark-color)
 
 }
 
-.list-advantages .text {
+.advantages-text{
   line-height: 1.71;
+  margin-top: 10px;
 
   color: var(--secondary-text-dark-color)
 
@@ -163,26 +255,44 @@ color: var(--secondary-text-dark-color)
 /* WORK */
 
 .list-work {
-  list-style: none;
+  display: flex;
+  column-gap: 30px ;
 }
 
 /* TEAM */
 
-.list-team {
-  list-style: none;
+.team {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: #F5F4FA;
 }
 
-.list-team .title {
+.list-team {
+  display: flex;
+  column-gap: 30px;
+}
+
+.item-team {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-subtitle {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  
+  margin-top: 30px;
+  text-align: center;
+
   color: var(--primary-text-dark-color)
 }
 
-.list-team .text {
+.team-text {
   font-size: 16px;
   line-height: 1.19;
+  text-align: center;
+  margin-top: 10px;
   color: var(--secondary-text-dark-color)
 }
 
@@ -191,10 +301,15 @@ color: var(--secondary-text-dark-color)
 /*==================================
  PORTFOLIO 
  ==================================*/
- 
+ .portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+ }
 
  .list-btn {
-  list-style: none;
+  display: flex;
+  column-gap: 8px;
+  justify-content: center;
  }
 
  .list-btn .btn-portfolio {
@@ -208,6 +323,11 @@ color: var(--secondary-text-dark-color)
 
   text-align: center;
   letter-spacing: 0.03em;
+  padding: 6px 22px;
+
+  background: #F5F4FA;
+  border-radius: 4px;
+  border: none;
 
   color: var(--primary-text-dark-color)
  }
@@ -223,8 +343,13 @@ color: var(--secondary-text-dark-color)
   color: var(--primary-text-light-color);
  }
 
+ /* PORTFOLIO IMG */
+
  .list-portfolio {
-  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin-top: 50px;
  }
 
  .list-portfolio .title {
@@ -233,6 +358,7 @@ color: var(--secondary-text-dark-color)
   line-height: 2;
 
   letter-spacing: 0.06em;
+  margin-top: 20px;
 
   color:var(--primary-text-dark-color);
  }
@@ -243,6 +369,7 @@ color: var(--secondary-text-dark-color)
   font-weight: 400;
   font-size: 16px;
   line-height: 30px;
+  margin-top: 8px;
 
   color: var(--secondary-text-dark-color);
  }
@@ -250,7 +377,9 @@ color: var(--secondary-text-dark-color)
 /* FOOTER*/
 
 .footer {
-  background-color: var(--secondary-background-color)
+  padding-top: 60px;
+  padding-bottom: 66px;
+  background-color: var(--secondary-background-color);
 }
 
 
@@ -278,15 +407,19 @@ color: var(--secondary-text-dark-color)
 }
 
 .footer .link-adres {
+  display: block;
   line-height: 1.71;
   text-decoration: none;
+  margin-top: 14px;
 
   color: var(--primary-text-light-color)
   }
 
 .footer .link {
+  display: block;
   line-height: 1.71;
   text-decoration: none;
+  margin-top: 9px;
 
   color: var(--secondary-text-light-color)
 }
