--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
   --secondary-text-dark-color: #757575;
   --primary-text-light-color: #FFFFFF;
   --secondary-text-light-color: rgba(255, 255, 255, 0.6);
-  --primary-background-color: #F5F5F5;
+  --primary-background-color: #FFFFFF;
   --secondary-background-color:#2F303A;
   --accent-color: #2196F3;
 }
@@ -333,18 +333,18 @@ border-radius: 4px;
 /*==================================
  PORTFOLIO 
  ==================================*/
- .portfolio {
+.portfolio {
   padding-top: 94px;
   padding-bottom: 94px;
- }
+}
 
- .list-btn {
+.list-btn {
   display: flex;
   column-gap: 8px;
   justify-content: center;
- }
+}
 
- .list-btn .btn-portfolio {
+.list-btn .btn-portfolio {
 
   font-family:inherit;
   font-style: normal;
@@ -362,30 +362,35 @@ border-radius: 4px;
   border: none;
 
   color: var(--primary-text-dark-color)
- }
+}
 
- .list-btn .btn-portfolio:hover,
- .list-btn .btn-portfolio:focus {
+.list-btn .btn-portfolio:hover,
+.list-btn .btn-portfolio:focus {
   background-color:  var(--accent-color);
   color: var(--primary-text-light-color);
- }
+}
 
- .list-btn .active {
+.list-btn .active {
   background-color:  var(--accent-color);
   color: var(--primary-text-light-color);
 
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
- }
+}
 
- /* PORTFOLIO IMG */
+/* PORTFOLIO IMG */
 
- .list-portfolio {
+.list-portfolio {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
   margin-top: 50px;
- }
+
+}
+
+.portfolio-link {
+  text-decoration: none;
+}
 
 .portfolio-card {
   padding: 20px  24px;
@@ -395,7 +400,7 @@ border-radius: 4px;
 
 }
 
- .list-portfolio .title {
+.list-portfolio .title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -403,9 +408,9 @@ border-radius: 4px;
   letter-spacing: 0.06em;
 
   color:var(--primary-text-dark-color);
- }
+}
 
- .list-portfolio .text {
+.list-portfolio .text {
 
   font-style: normal;
   font-weight: 400;
@@ -414,7 +419,7 @@ border-radius: 4px;
   margin-top: 8px;
 
   color: var(--secondary-text-dark-color);
- }
+}
  
 /* FOOTER*/
 
@@ -461,7 +466,7 @@ border-radius: 4px;
   text-decoration: none;
 
   color: var(--primary-text-light-color)
-  }
+}
 
 .footer .link {
   display: block;
